✨ PIC-1859 post merge updates